--- a/web/private/write/UploadBook.html
+++ b/web/private/write/UploadBook.html
@@ -43,30 +43,38 @@
 	<h1>Volltexte hochladen</h1>
 	<input class="inputStyle" type="file" id="fileUpID" multiple/>
 
-	<h2><span>1.</span>Wo sind die Dateien?</h2>
-	<p>Die Dateien (nur .jpg und .txt hochladen!) der Staatsbibliothek müssen zuerst einmal auf den Projekt-Server gelangen. Lade sie von der Bibliothek auf deinen PC und nutze das Feld unten, um sie wieder auszuwählen. Sie werden dann auf den Projekt-Server übertragen.</p>
-	<p><strong>Wichtig:</strong> Schließe diesen Tab nicht, während der Upload läuft!</p>
-	<h3>Zum Format der Dateien</h3>
-	<p>Jede Bilddatei muss in diesem Format benannt sein: page$NUMBER$.jpg NUMBER bezieht sich hier auf die Seitennummer im Buch. Die OCRs muessen zur Seitentrennung dieses Format verwenden ----- $PAGENUMBER$ / $MAXPAGENUMBER$ -----\n. Es wurden nur Dateien im JPG,PNG und TXT Format angenommen. Falls das Buch von der BSB stammen sollte muss man sich darum keine Sorgen machen, die formatieren ihre Buecher bereits in diesem Format.</p>
+    <h2><span>1.</span> Vorbereitung</h2>
+    <p>Was brauche ich, um ein Buch hochzuladen? Wenn Sie ein Buch hochladen wollen, sollten im Vorfeld folgende Dinge am besten auf Ihrem PC vorliegen: </p>
+    <p>1. Alle zu dem Buch vorhandenen Dateien (Scans der einzelnen Seiten und ggf. die OCR-Datei). </p>
+    <img src="/static/examples/buchDateien.png" alt="Beispiel Dateien" class="exampleImg"> 
+    <p>2. Das Buch muss bereits einen Eintrag in Zotero haben. Liegt ein Buch in Zotero vor, dann besitzt es einen sogenannten "Item-Key", der zum Hochladen des Buches auf dem clas-digital Server notwendig ist. Es reicht allerdings, wenn sie die URL des Buches kennen, die in ihrem Browserfenster angezeigt weird, wenn Sie in Zotero das entsprechende Buch ausgewählt haben. Der Uploader sucht sich den Item-Key selbstständig heraus. </p>
+    <img src="/static/examples/ItemKey.png" alt="Beispiel Item-Key" class="exampleImg"> 
+    <h4>Zum Format der Dateien</h4>
+	<p>Jede Bilddatei/ jeder Scan muss nach folgendem Format benannt sein: page[Seitennummer].jpg. "Seitennummer" bezieht sich hier auf die Seitennummer im Buch (das Deckblatt wäre z.B. mit page001.jpg benannt). Die OCRs müssen zur Seitentrennung folgendes Format verwenden ----- [Seitennummer] / [maximale Seitenzahl] -----. Es werden nur Dateien im JPG, PNG und TXT Format angenommen. (Falls das Buch von der BSB stammen sollte müssen Sie sich darum keine Sorgen machen, sie sollten bereits in genau diesem Format vorliegen.)</p>
+
+	<h2><span>2.</span> Auswählen der Dateien</h2>
+	<p>Es kann immer nur ein Buch hochgeladen werden. Ein "Buch" besteht aus Scans der einzelnen Seiten des Buches und ggf. einer .ocr Datei. Diese Datei sollten auf Ihrem PC vorliegen. Falls das hochzuladene Buch von der Staatsbibliothek kommt, laden Sie dieses also zunächst auf ihren PC (zu empfehlen: ein Ordner pro Buch, in dem sich alle Datei (Scans und ggf. ocr) befinden. Nutze sie dann das untenstehende Feld, um sie wieder auszuwählen. Die Dateien werden dann auf den Projekt-Server übertragen.</p>
+	<p><strong>Wichtig:</strong> Schließen Sie diesen Tab nicht, während der Upload läuft!</p>
 	<ul class="list-group" id="CurrentUploads">
 	</ul>
 	<ul id="FileDropList" class="filesList">
 	    <li onclick='document.getElementById("fileUpID").click()'>Hier klicken um eine Datei auszuwaehlen</li>
 	</ul>
 	<br>
-	<h2><span>2.</span>Ist alles korrekt?</h2>
+	<h2><span>3.</span> Ist alles korrekt?</h2>
 	<div aria-label="Vorhandene Scans" class="pagesRange">Noch keine Scans hochgeladen</div>
 	<div aria-label="Durchsuchbarer Text?" class="hasText">Nein, es wurde kein durchsuchbarer Text hochgeladen</div>
 
 	<br>
-	<h2><span>3.</span>Welches Werk ist das?</h2>
-	<p>Fuege noch den Link zu Zotero ein um das Item spaeter immer korrekt zuordnen zu koennen:</p>
-	<input id="Permalink" class="description" type="text" placeholder="Permalink hier einfügen" oninput="ShowBookContentLink();">
+	<h2><span>4.</span> Welches Werk ist das?</h2>
+	<p>Fügen Sie noch den Link zu Zotero ein (die URL die oben in ihrem Browserfenster angezeigt wird, wenn Sie in Zotero das entsprechende Buch ausgewählt haben), damit der Projektserver das Buch später immer korrekt zuordnen kann (dies ist der zuvor erwähnte "Item-Key"):</p>
+	<input id="Permalink" class="description" type="text" placeholder="Item-Key hier einfügen" oninput="ShowBookContentLink();">
 	<div id="BookContentLink" style='display:inline-block;margin-left: 2rem;'></div>
 	</input>
+    <p> Nachdem sie den Item-Link (bzw. die URL) eingetragen haben, erscheinen zwei links. Der erste führt Sie zu einer Übersicht der bereits für dieses Buch existierenden Dateien auf dem Server. Der zweite Link führt Sie zu den Metadaten des Buches (so können Sie nochmlas sichergehen, ob Sie das richtige Buch ausgewählt haben.</p>
 	<br>
-	<h2><span>4.</span>Ocr Options</h2>
-	<p>Es ist moeglich eine OCR vom Server erstellen zu lassen. Um diese Option zu benutzen setzten sie bitte ein Haekchen in der Checkbox unten. <b>Dieser Vorgang dauert sehr lange benuzten Sie diese Funktion nur wenn sie wenige Dateien hochladen!</b></p>
+	<h2><span>5.</span> Option: Erstellen einer OCR</h2>
+	<p>Es ist möglich eine OCR vom Server erstellen zu lassen. Um diese Option zu benutzen setzten Sie bitte ein Häkchen in der Checkbox unten. <b>Dieser Vorgang dauert sehr lange benuzten Sie diese Funktion nur wenn sie wenige Dateien hochladen!</b></p>
 	<div>
 	    <span>Der Server soll eine computergenerierte OCR erstellen: </span>
 	    <input id='languageoptenabled' onclick='show_language(this);' type='checkbox'/>
@@ -76,12 +84,23 @@
 		<option value='eng'>Englisch</option>
 	    </select>
 	</div>
-	<h2><span>5.</span>Speichern!</h2>
+	<h2><span>6.</span> Hochladen beginnen!</h2>
 	<div class="saver" id="saver">
 	    <p>Speichere diesen Volltext auf dem Projektserver!</p>
 	    <button id="SaveNow" class="saveButton" onclick="UploadAll();return true;">Speichern!</button>
 	</div>
-    </div>
+
+    <h2><span>7.</span> Etwas Schiefgelaufen? Dateien schon auf dem Server vorhanden?</h2>
+    <p>Ist etwas schief gelaufen? Machen sie sich keine Sorgen! Sollte die Internetverbindung abgebrochen sein, oder das Hochladen aus einem anderen Grund nicht funktioniert haben, ist das kein Grund zur Sorge! Alle Datein, die bis zum dem Abruch hochgeladen worden sind befinden sich sicher auf dem Server. Wiederholen Sie einfach den Vorgang, wählen Sie nochmals alle Dateien aus, die Sie hochladen wollten. Es wird Ihnen dann angezeigt, welche Dateien, bereist vorhanden sind. Sie können selbst auswählen, welche Dateien Sie hochladen wollen. Drücken Sie dafür auf "Compare Files", um die Dateien zu vergleichen und dann auszuwählen.</p>
+    <img src="/static/examples/überschreiben1.png" alt="Dateien Überschreiben1" class="exampleImg">
+    <p>Generell wird Ihnen immer angeziegt, wenn zu dem Buch, dass Sie hochladen wollen bereits Dateien auf dem Server existieren. Sie können stets auswählen, welche Dateien Sie überschreiben, oder vielleicht lieber doch nicht hinzufügen wollen.</p>
+    <img src="/static/examples/überschreiben2.png" alt="Dateien Überschreiben2" class="exampleImg">
+    <p>Sie müssen für jedes Buch einzelnd diese Wahl treffen. Es wird Ihnen angezeigt, welches Datein sie überschreiben und für welche Dateien Sie den Upload abgebrochen haben.</p>
+    <img src="/static/examples/überschreiben3.png" alt="Dateien Überschreiben3" class="exampleImg">
+    <p>Wenn Sie für alle Dateien eine Aswahl getroffen haben wird der Upload automatisch fertig gestellt. Es sollte eine grüne Bestätigungsnachricht erscheinen.</p>
+
+    </div> 
+
     <div id="modal" style="display: none;position: fixed; top: 10vh;left: 10vw; width: 80vw; padding: 1rem; height: 80vh; z-index: 3;background:grey;">
 	<div style='display: grid; grid-template-columns: 48% 48%;grid-template-rows: 2.5rem calc(100% - 5rem) 2.5rem;height:100%;width:100%;grid-column-gap: 2%;'>
 	    <p style="grid-column: 1 /span 1;grid-row: 1 /span 1;margin:auto;background:white;">Old File</p>
